# bashguard

./: .gitignore  .todo.json  LICENSE  LICENSE.md  README.md  deploy.toml  pyproject.toml
.qa-review/: cleancode.md  codesmells.md  deep-review.md  notebook.md
bash_ast/: __init__.py  cli.py  grammar.bnf  parser.py  types.py
bash_audit/: __init__.py  auditor.py  cli.py  context.py  models.py  policy.py
bashguard/: __init__.py  approval_cache.py  audit_log.py  audit_stats.py  auditor.py  cli.py  context.py  credentials.py  grammar.bnf  llm_fallback.py  models.py  parser.py  policy.py  project_config.py  seatbelt.py  setup.py  strict_mode.py  types.py
core/: focus.md  identity.md  memory.claude.md  memory.md  skills.md
docs/: vs-n2-ark.md
hooks/: 09-shared-repo-worktree-guard  11-contract-enforcement  70-bashguard  75-bashguard-mount  75-bashguard-unmount
journals/: bashguard-1-20260403160511-Hook-enforcement-was-a-ghost.md  bashguard-1-20260408124942-Mythos-Incidents-And-Ego.md  bashguard-2-20260409111404-Systematic-Is-Its-Own-Satisfaction.md  bashguard-3-20260709070107-journal.md  bashguard-4-20260709144344-journal.md  bashguard-5-20260709145115-journal.md  bashguard-unknown-20260709005127-journal.md
sessions/: learnings.md  notes.md  pending.md
settings/: CRITICAL_RULE.md  gitignore  metadata.json  runtime-config.json
specs/: 00-bash-ast-security-interceptor.md  01-story.md  02-response-policies.md  03-cli.md  04-evasions.md  05-fail-close.md  06-dyld-sandbox.md  bash-audit.md
spike/: acl_shadow_fs.py  colony_hooks.py  passthrough_fs.py  session.py  (+2 more)
(+162 files in other folders)
