[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bashguard"
version = "0.1.0"
description = "Bash security interceptor for LLM sandboxing"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-bash>=0.23",
    "data-grammar>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
bashguard = "bashguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bashguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
